Fixes and improvements: - Fixed recaptcha width overflow (width padding eater...) - Improved sign in and sign up inputs sizes - Fixed breadcrumb margin to be compatible to other elements - Improved mobile menu user styles, arrow and animations

--- a/TarkCss/Responsive/style.css
+++ b/TarkCss/Responsive/style.css
@@ -500,6 +500,12 @@ main>*:first-child {
     animation: fade-in 2.5s;
 }
 
+
+.fade-in-slide-down {
+    animation: fade-in .5s, slide-down .3s;
+}
+
+
 .fade-in-slide-down-slow {
     animation: fade-in 2.0s, slide-down 1.0s;
 }
@@ -822,8 +828,8 @@ main>*:first-child {
 }
 
 .breadcrumb {
-    padding-top: 15px;
-    padding-left: 15px;
+    padding-top: 10px;
+    padding-left: 10px;
 }
 
 .breadcrumb a {
@@ -832,6 +838,43 @@ main>*:first-child {
     padding:5px;
     font-size: 21px;
     color: #888;
+}
+
+@media only screen and (max-width:650px) {
+    .breadcrumb a { font-size: 1em; }
+}
+
+
+
+.gb_rb {
+border-color: transparent;
+    border-style: dashed dashed solid;
+    border-width: 0 8.5px 8.5px;
+    position: absolute;
+    right: 15px;
+    top: -9px;
+    z-index: 1;
+    height: 0;
+    width: 0;
+    -webkit-animation: gb__a .2s;
+    animation: gb__a .2s;
+    border-bottom-color: #ccc;
+    border-bottom-color: rgba(0,0,0,.2);
+}
+
+.gb_qb {
+    border-color: transparent;
+    border-bottom-color: #fff;
+    border-style: dashed dashed solid;
+    border-width: 0 8.5px 8.5px;
+    position: absolute;
+    right: 15px;
+    top: -8px;
+    z-index: 1;
+    height: 0;
+    width: 0;
+    -webkit-animation: gb__a .2s;
+    animation: gb__a .2s;
 }
 
 .container 
@@ -862,7 +905,11 @@ main>*:first-child {
     width:275px;
     padding:20px;
     top: 55px;
-    right: 5px;
+    right: 38px;
+    box-shadow: 0 2px 10px rgba(0,0,0,.75);
+    background: #fff;
+    border: 1px solid #ccc;
+    border-color: rgba(0,0,0,.2);
 }
 
 .citation {
